<resources>
    <string name="app_name">Farmadosis</string>

    <string name="one_click_testing">One-click Test</string>
    <string name="back">Back</string>
    <string name="devic_number">Device: Cloud Creation Mainboard</string>
    <string name="replace_serial_port">Change Serial Port</string>
    <string name="camera">Camera</string>

    <string name="image_recognition">Image Recognition</string>
    <string name="image_recognition_tip">Note: The upper part shows the channel number, and the lower part shows the cargo code.</string>
    <string name="system_settings">System Settings</string>
    <string name="real_machine_diagram">Real\nMachine\nDiagram</string>
    <string name="plan_image">Floor\nPlan</string>
    <string name="receive_instructions">Received Cmd:</string>
    <string name="send_instructions">Send Cmd:</string>
    <string name="control_mode">Control\nMode</string>
    <string name="component_testing">Component \n Test</string>
    <string name="empty_instructions">Clear Cmd</string>
    <string name="device_status">Device Status</string>
    <string name="warehouse_cargo_inspection">Warehouse Check</string>
    <string name="close">Close</string>
    <string name="cabinet_door_status">Cabinet Door Status</string>
    <string name="lift_clogged">Lift Blocked</string>
    <string name="status_check">Status Check</string>
    <string name="status_self_check">Self-check</string>
    <string name="reconnect">Reconnect</string>
    <string name="userPage">User Page</string>
    <string name="selectAD">Select Advertisement</string>
    <string name="positive_rotation">Forward</string>
    <string name="rollback">Reverse</string>
    <string name="stop">Stop</string>
    <string name="pickup_mode">Pickup Layer Mode</string>
    <string name="recycling_mode">Recycling Layer Mode</string>
    <string name="mode_tip">Select mode, click left grid to test</string>
    <string name="pickup_layer">Pickup Layer</string>
    <string name="recycling_layer">Recycling Layer</string>
    <string name="enter_the_direction">Enter Direction</string>
    <string name="enter_the_steps">Enter Steps</string>
    <string name="save_settings">Save</string>
    <string name="x_axis">X-axis</string>
    <string name="y_axis">Y-axis</string>
    <string name="confirm_recognition">Confirm recognition</string>
    <string name="rise">Up</string>
    <string name="decline">Down</string>
    <string name="reposition">Reset</string>
    <string name="no_status">No Status</string>
    <string name="lift">Lift</string>
    <string name="X_axis">X Axis</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="number">number</string>
    <string name="aisle_number">Aisle Number</string>
    <string name="goods_code">Goods Code</string>
    <string name="upper_side_door">Upper Door</string>
    <string name="lower_side_door">Lower Door</string>
    <string name="recycling_door">Recycling Door</string>
    <string name="pickup_door">Pickup Door</string>
    <string name="single_layer_testing">Single Layer Test</string>
    <string name="layer_setting">Layer Settings</string>
    <string name="close_camera">Close Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="open">Open</string>
    <string name="snap">Take Photo</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="one_key_photo">Snap Photo</string>

    <string name="Y_axis_upper_limit">Y-Axis Upper Limit</string>
    <string name="Y_axis_lower_limit">Y-Axis Lower Limit</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>