<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/leftLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_real_image"
            android:layout_width="50dp"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_left_botton_selector"
            android:button="@null"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:paddingTop="75dp"
            android:text="@string/real_machine_diagram"
            android:textColor="@drawable/text_left_botton_color_selector"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/rb_plan_image"
            android:layout_width="50dp"
            android:layout_height="180dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_left_botton_selector"
            android:button="@null"
            android:checked="true"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:paddingTop="75dp"
            android:text="@string/plan_image"
            android:textColor="@drawable/text_left_botton_color_selector"
            android:textSize="18dp" />
    </RadioGroup>


</LinearLayout>