<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ypg_bacc">


    <include
        android:id="@+id/item_main_top"
        layout="@layout/item_main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_main_top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <include
                android:id="@+id/leftLinearLayout"
                layout="@layout/item_main_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="oneClickTesting">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/app_name"
                                android:scaleType="centerCrop"
                                android:src="@drawable/one_click_testing" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/one_click_testing"
                                android:textColor="#FFFFFF"
                                android:textSize="21dp" />

                        </FrameLayout>


                        <FrameLayout
                            android:id="@+id/fl_left_root"
                            android:layout_width="match_parent"
                            android:layout_height="360dp" />


                    </LinearLayout>

                    <ImageView
                        android:layout_width="400dp"
                        android:layout_height="40dp"
                        android:background="@drawable/machine_bottm_img" />

                </LinearLayout>


                <include
                    layout="@layout/item_main_send_rec_cmd"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/empty_instructions"
                    android:gravity="center"
                    android:onClick="clearCmd"
                    android:text="@string/empty_instructions"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <include
                android:id="@+id/item_main_control_conponent"
                layout="@layout/item_main_control_conponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="-40dp"
                android:elevation="2dp"
                android:gravity="center_vertical" />

            <FrameLayout
                android:id="@+id/fl_top_root"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="-20dp"
                android:layout_weight="1" />


            <include
                android:id="@+id/item_main_machine_status"
                layout="@layout/item_main_machine_status"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="-10dp" />


            <include
                android:id="@+id/item_main_stauts_botton"
                layout="@layout/item_main_stauts_botton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="30dp" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>